--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "dependencies": {
     "request": "^2.81.0",
     "spotify": "^0.3.0",
-    "twitter": "^1.7.0",
-    "weather-js": "^2.0.0"
+    "twitter": "^1.7.0"
   },
   "devDependencies": {},
   "scripts": {
